[gd_scene load_steps=4 format=3 uid="uid://d2da0thyq5rq8"]

[ext_resource type="Script" path="res://src/ui_elements/enum_field.gd" id="1_1jqoy"]
[ext_resource type="Script" path="res://src/ui_elements/BetterLineEdit.gd" id="2_4bajq"]
[ext_resource type="Texture2D" uid="uid://coda6chhcatal" path="res://visual/icons/Arrow.svg" id="3_vhd8v"]

[node name="EnumField" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 22)
offset_right = 73.0
offset_bottom = 22.0
theme_override_constants/separation = 0
script = ExtResource("1_1jqoy")

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
focus_mode = 1
mouse_filter = 1
theme_type_variation = &"RightConnectedLineEdit"
script = ExtResource("2_4bajq")
code_font_tooltip = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"LeftConnectedButton"
icon = ExtResource("3_vhd8v")
expand_icon = true

[connection signal="focus_entered" from="LineEdit" to="." method="_on_focus_entered"]
[connection signal="text_change_canceled" from="LineEdit" to="." method="_on_text_change_canceled"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_text_submitted"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
